@@ -1,4 +1,6 @@
-// For getting objects but perserving backwards compatibility
+/**
+ * For getting objects but perserving backwards compatibility
+ */
 function get_object(name)
 {
   if (document.getElementById)
@@ -16,7 +18,9 @@ function get_object(name)
   return false;
 }
 
-// For toggling the display on an object
+/**
+ * Toggles the display on an object
+ */
 function toggleDisplay(name, obj)
 {  
   if (obj.style.display=="none")
@@ -27,4 +31,13 @@ function toggleDisplay(name, obj)
   {
     obj.style.display="none";
   }
+}
+
+/**
+ * Transforms the first character of string to uppercase
+ * e.g. kittie => Kittie
+ */
+function ucfirst(stringtt)
+{
+  return stringtt.charAt(0).toUpperCase()+stringtt.substring(1,stringtt.length)
 }
